--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     restart: always
     volumes:
       - ./containers/db:/docker-entrypoint-initdb.d
+    ports:
+      - '5432:5432'
     environment:
       POSTGRES_PASSWORD: pass
       POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --locale=C"
