--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,10 @@ jobs:
           PG_PASSWORD: pass
           PG_USER: postgres
           SELENIUM_DRIVER_URL: http://selenium_chrome:4444/wd/hub
+      - image: circleci/postgres:9.6-postgis-ram
+        environment:
+          POSTGRES_PASSWORD: pass
+          POSTGRES_INITDB_ARGS: "--encoding=UTF-8 --locale=C"
     executor: ruby/default
     steps:
       - checkout
@@ -22,3 +26,7 @@ jobs:
           name: Which bundler?
           command: bundle -v
       - ruby/bundle-install
+      - run:
+        name: Database setup
+        command: bundle exec rake db:schema:load --trace
+
