--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,6 @@
 version: '3'
+volumes:
+  bundle:
 services:
   db:
     image: postgres:9.6-alpine
@@ -16,6 +18,7 @@ services:
       context: .
     volumes:
       - .:/var/src/app
+      - bundle:/usr/local/bundle
     ports:
       - '80:3000'
     environment:
