--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 version: '3'
 volumes:
   bundle:
+  postgres:
 services:
   db:
     image: postgres:9.6-alpine
     restart: always
     volumes:
       - ./containers/db:/docker-entrypoint-initdb.d
+      - postgres:/var/lib/postgresql/data
     ports:
       - '5432:5432'
     environment:
