--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,5 +28,6 @@ jobs:
       - ruby/bundle-install
       - run:
         name: Database setup
+        command: bundle exec rake db:create
         command: bundle exec rake db:schema:load --trace
 
