--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,11 +23,13 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Which bundler?
-          command: bundle -v
+        name: Which bundler?
+        command: bundle -v
       - ruby/bundle-install
       - run:
-          name: Database setup
-          command: bundle exec rake db:create
-          command: bundle exec rake db:schema:load --trace
+        name: Wait for DB
+        command: dockerize -wait tcp://localhost:5432 -timeout 1m
+      - run:
+        name: Database setup
+        command: bundle exec rake db:schema:load --trace
 
