ruby/bundle-install

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: Which bundler?
           command: bundle -v
-      # - ruby/bundle-install
+      - ruby/bundle-install
       # - run:
       #   name: Wait for DB
       #   command: dockerize -wait tcp://localhost:5432 -timeout 1m
