--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,9 +26,9 @@ jobs:
           name: Which bundler?
           command: bundle -v
       - ruby/bundle-install
-      # - run:
-      #   name: Wait for DB
-      #   command: dockerize -wait tcp://localhost:5432 -timeout 1m
+      - run:
+          name: Wait for DB
+          command: dockerize -wait tcp://localhost:5432 -timeout 1m
       # - run:
       #   name: Database setup
       #   command: bundle exec rake db:schema:load --trace
