--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,9 @@ jobs:
           name: Wait for DB
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
       - run:
-          name: Database setup
-          command: bundle exec rake db:schema:load --trace
+          name: Create db
+          command: bundle exec rake db:create
+      # - run:
+      #     name: Database setup
+      #     command: bundle exec rake db:schema:load --trace
 
