--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,4 +36,11 @@ jobs:
       - run:
           name: Database setup
           command: bundle exec rake db:schema:load --trace
-
+      - run:
+          name: Run RSpec
+          command: |
+            bundle exec rspec --profile 10 \
+                              --format RspecJunitFormatter \
+                              --out test_results/rspec.xml \
+                              --format progress \
+                              $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
