bundleをrestore_cacheとsave_cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,15 @@ jobs:
       - run:
           name: Which bundler?
           command: bundle -v
+      - restore_cache:
+          keys:
+            - task-management-bundle-v2-{{ checksum "Gemfile.lock" }}
+            - task-management-bundle-v2-
       - ruby/bundle-install
+      - save_cache:
+          key: task-management-bundle-v2-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
       - run:
           name: Wait for DB
           command: dockerize -wait tcp://localhost:5432 -timeout 1m
