--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,3 +52,5 @@ jobs:
                               --out test_results/rspec.xml \
                               --format progress \
                               $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
+      - store_test_results:
+          path: test_results
