circleci上で.ruby-versionが2.2になっていたので/vendorをスキップ

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,6 +17,7 @@ AllCops:
     - 'config/**/*'
     - 'script/**/*'
     - !ruby/regexp /old_and_unused\.rb$/
+    - 'vendor/**/*'
 
 Lint/RaiseException:
   Enabled: false
