--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,7 @@ jobs:
           dockerfile: Dockerfile
           region: AWS_DEFAULT_REGION
           repo: AWS_RESOURCE_NAME_PREFIX
-          tag: 'latest,TaskManagementTag'
+          tag: CIRCLE_SHA1
 
 workflows:
   build-and-deploy:
