--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,8 +101,8 @@ workflows:
           region: AWS_DEFAULT_REGION
           repo: ${AWS_RESOURCE_NAME_PREFIX}
       - aws-ecs/deploy-service-update:
-          requires:
-            - aws-ecr/build_and_push_image
+          # requires:
+          #   - aws-ecr/build_and_push_image
           aws-region: ${AWS_DEFAULT_REGION}
           family: "${AWS_RESOURCE_NAME_PREFIX}-service"
           cluster-name: "${AWS_RESOURCE_NAME_PREFIX}-cluster"
