--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,18 +117,18 @@ jobs:
 workflows:
   build-and-deploy:
     jobs:
-      - build
-      - aws-ecr/build-and-push-image:
-          requires:
-            - build
-          account-url: AWS_ECR_ACCOUNT_URL
-          aws-access-key-id: AWS_ACCESS_KEY_ID
-          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
-          create-repo: true
-          dockerfile: Dockerfile
-          region: AWS_DEFAULT_REGION
-          repo: ${AWS_RESOURCE_NAME_PREFIX}
-          tag: ${CIRCLE_SHA1}
+      # - build
+      # - aws-ecr/build-and-push-image:
+      #     requires:
+      #       - build
+      #     account-url: AWS_ECR_ACCOUNT_URL
+      #     aws-access-key-id: AWS_ACCESS_KEY_ID
+      #     aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+      #     create-repo: true
+      #     dockerfile: Dockerfile
+      #     region: AWS_DEFAULT_REGION
+      #     repo: ${AWS_RESOURCE_NAME_PREFIX}
+      #     tag: ${CIRCLE_SHA1}
       - deploy:
           requires:
             - aws-ecr/build-and-push-image
