--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,6 @@ jobs:
   #                             $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
   #     - store_test_results:
   #         path: test_results
-
   deploy:
     docker:
       - image: circleci/buildpack-deps
@@ -129,6 +128,6 @@ workflows:
       #     region: AWS_DEFAULT_REGION
       #     repo: ${AWS_RESOURCE_NAME_PREFIX}
       #     tag: ${CIRCLE_SHA1}
-      - deploy:
+      - deploy
           # requires:
           #   - aws-ecr/build-and-push-image
