最終チェック

--- a/.circleci/ecs-docker-compose.yml
+++ b/.circleci/ecs-docker-compose.yml
@@ -17,7 +17,7 @@ services:
     image: 813281301262.dkr.ecr.us-east-2.amazonaws.com/osakaya-tm
     # volumes:
     #   - .:/var/src/app
-    command: /bin/sh -c "rm -f /var/src/app/tmp/pids/server.pid;bundle exec rails s -b 0.0.0.0"
+    command: /bin/sh -c "rm -f /var/src/app/tmp/pids/server.pid;bundle exec rails s -b 0.0.0.0;bundle exec rails db:migrate"
     ports:
       - '80:3000'
     environment:
